archivos de docker

--- a/config/odoo.conf
+++ b/config/odoo.conf
@@ -2,14 +2,12 @@
 ; Puerto en el que se ejecutará Odoo
 http_port = 8069
 
-; Nombre de la base de datos
-db_name = odoo
-
-; Usuario y contraseña para la conexión a la base de datos
-db_user = odoo
-db_password = odoo
-db_host = db
-db_port = 5432
+; Configuración de la base de datos
+db_name = ${POSTGRES_DB}
+db_user = ${POSTGRES_USER}
+db_password = ${POSTGRES_PASSWORD}
+db_host = ${POSTGRES_HOST}
+db_port = ${POSTGRES_PORT}
 
 ; Directorio de complementos
 addons_path = /mnt/extra-addons
