archivos de despliegue

--- a/config/odoo.conf
+++ b/config/odoo.conf
@@ -9,14 +9,14 @@ db_password = ${POSTGRES_PASSWORD}
 db_host = ${POSTGRES_HOST}
 db_port = ${POSTGRES_PORT}
 
-; Directorio de complementos
-addons_path = /mnt/extra-addons
+; Directorio de complementos (mover al volumen /var/lib/odoo)
+addons_path = /var/lib/odoo/extra-addons
 
 ; Ruta para guardar datos persistentes de Odoo
 data_dir = /var/lib/odoo
 
-; Configuración del registro (opcional)
-logfile = /var/log/odoo/odoo.log
+; Configuración del registro (mover al volumen /var/lib/odoo)
+logfile = /var/lib/odoo/logs/odoo.log
 log_level = info
 
 ; Configuración para desarrolladores (opcional)
