cambio en conf de odoo

--- a/config/odoo.conf
+++ b/config/odoo.conf
@@ -7,7 +7,7 @@ db_name = ${POSTGRES_DB}
 db_user = ${POSTGRES_USER}
 db_password = ${POSTGRES_PASSWORD}
 db_host = ${POSTGRES_HOST}
-db_port = ${POSTGRES_PORT}
+db_port = 5432
 
 ; Directorio de complementos (mover al volumen /var/lib/odoo)
 addons_path = /var/lib/odoo/extra-addons
