cambio en variables de configuracion

--- a/config/odoo.conf
+++ b/config/odoo.conf
@@ -3,10 +3,10 @@
 http_port = 8069
 
 ; Configuración de la base de datos
-db_name = ${POSTGRES_DB}
-db_user = ${POSTGRES_USER}
-db_password = ${POSTGRES_PASSWORD}
-db_host = ${POSTGRES_HOST}
+db_name = railway
+db_user = postgres
+db_password = qfpKesfyVprlwFqQkeLeWpdSgoiUIuVb
+db_host = postgres.railway.internal
 db_port = 5432
 
 ; Directorio de complementos (mover al volumen /var/lib/odoo)
