--- a/config/odoo.conf
+++ b/config/odoo.conf
@@ -4,7 +4,7 @@ http_port = 8069
 
 ; Configuración de la base de datos
 db_name = railway
-db_user = postgres
+db_user = odoo
 db_password = qfpKesfyVprlwFqQkeLeWpdSgoiUIuVb
 db_host = postgres.railway.internal
 db_port = 5432
