--- a/config/odoo.conf
+++ b/config/odoo.conf
@@ -3,7 +3,7 @@
 http_port = 8069
 
 ; Configuración de la base de datos
-db_name = railway
+db_name = odoo
 db_user = odoo
 db_password = qfpKesfyVprlwFqQkeLeWpdSgoiUIuVb
 db_host = postgres.railway.internal
