--- a/config/odoo.conf
+++ b/config/odoo.conf
@@ -6,8 +6,8 @@ http_port = 8069
 db_name = odoo
 db_user = odoo
 db_password = qfpKesfyVprlwFqQkeLeWpdSgoiUIuVb
-db_host = postgres.railway.internal
-db_port = 5432
+db_host = junction.proxy.rlwy.net
+db_port = 44602
 
 ; Directorio de complementos (mover al volumen /var/lib/odoo)
 addons_path = /var/lib/odoo/extra-addons
