--- a/config/odoo.conf
+++ b/config/odoo.conf
@@ -1,22 +1,21 @@
-[options]
 ; Puerto en el que se ejecutará Odoo
 http_port = 8069
 
 ; Configuración de la base de datos
 db_name = odoo
-db_user = odoo
-db_password = qfpKesfyVprlwFqQkeLeWpdSgoiUIuVb
+db_user = odooAdmin
+db_password = odooAdmin2023
 db_host = junction.proxy.rlwy.net
 db_port = 44602
 
-; Directorio de complementos (mover al volumen /var/lib/odoo)
-addons_path = /var/lib/odoo/extra-addons
+; Directorio de complementos
+addons_path = /mnt/extra-addons
 
 ; Ruta para guardar datos persistentes de Odoo
 data_dir = /var/lib/odoo
 
-; Configuración del registro (mover al volumen /var/lib/odoo)
-logfile = /var/lib/odoo/logs/odoo.log
+; Configuración del registro (opcional)
+logfile = /var/log/odoo/odoo.log
 log_level = info
 
 ; Configuración para desarrolladores (opcional)
