Update odoo.conf 4

--- a/config/odoo.conf
+++ b/config/odoo.conf
@@ -1,3 +1,4 @@
+[options]
 ; Puerto en el que se ejecutará Odoo
 http_port = 8069
 
@@ -9,7 +10,7 @@ db_host = junction.proxy.rlwy.net
 db_port = 44602
 
 ; Directorio de complementos
-addons_path = /mnt/extra-addons
+addons_path = /usr/lib/python3/dist-packages/odoo/addons,/var/lib/odoo/extra-addons
 
 ; Ruta para guardar datos persistentes de Odoo
 data_dir = /var/lib/odoo
