Update odoo.conf 5

--- a/config/odoo.conf
+++ b/config/odoo.conf
@@ -10,7 +10,7 @@ db_host = junction.proxy.rlwy.net
 db_port = 44602
 
 ; Directorio de complementos
-addons_path = /usr/lib/python3/dist-packages/odoo/addons,/var/lib/odoo/extra-addons
+addons_path = /usr/lib/python3/dist-packages/odoo/addons,/mnt/addons
 
 ; Ruta para guardar datos persistentes de Odoo
 data_dir = /var/lib/odoo
